# thunder_optimal

./: .gitignore  README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/franka_example_controllers/: teleop_gripper_paramConfig.h  teleop_paramConfig.h
devel/lib/franka_control/: franka_combined_control_node  franka_control_node
devel/lib/franka_example_controllers/: dual_arm_interactive_marker.py  interactive_marker.py  move_to_start.py  teleop_gripper_node
devel/lib/franka_gripper/: franka_gripper_node
devel/lib/franka_visualization/: gripper_joint_state_publisher  robot_joint_state_publisher
devel/lib/panda_controllers/: menu
devel/lib/pkgconfig/: franka_control.pc  franka_description.pc  franka_example_controllers.pc  franka_gazebo.pc  franka_gripper.pc  franka_hw.pc  franka_msgs.pc  franka_visualization.pc  panda_controllers.pc
devel/share/franka_control/cmake/: franka_controlConfig.cmake
devel/share/franka_description/cmake/: franka_descriptionConfig.cmake
devel/share/franka_example_controllers/cmake/: franka_example_controllers-msg-paths.cmake  franka_example_controllersConfig.cmake
devel/share/franka_gazebo/cmake/: franka_gazeboConfig.cmake
devel/share/franka_gripper/cmake/: franka_gripper-msg-paths.cmake  franka_gripperConfig.cmake
devel/share/franka_hw/cmake/: franka_hwConfig.cmake
devel/share/franka_msgs/cmake/: franka_msgs-msg-extras.cmake  franka_msgs-msg-paths.cmake  franka_msgsConfig.cmake
devel/share/franka_visualization/cmake/: franka_visualizationConfig.cmake
devel/share/panda_controllers/cmake/: panda_controllers-msg-paths.cmake  panda_controllersConfig.cmake
devel/share/roseus/ros/franka_example_controllers/: manifest.l
devel/share/roseus/ros/franka_gripper/: manifest.l
src/panda_controllers/: CMakeLists.txt  README.md  package.xml
src/panda_controllers/include/utils/: franka_gen.h  thunder_optimization.h
src/panda_controllers/launch/: panda_controllers_sim.launch
src/panda_controllers/src/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  menu.cpp  optimal_control.cpp  thunder_franka.cpp  thunder_franka.h  thunder_optimization.cpp  traj_pub.cpp
src/panda_controllers/src/catkin_generated/: generate_cached_setup.py  ordered_paths.cmake  package.cmake  panda_controllers-msg-extras.cmake.develspace.in  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/panda_controllers/src/catkin_generated/installspace/: panda_controllers-msg-paths.cmake  panda_controllers.pc  panda_controllersConfig.cmake
src/panda_controllers/src/cmake/: panda_controllers-genmsg-context.py
src/panda_controllers/src/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
src/panda_controllers/src/devel/lib/pkgconfig/: panda_controllers.pc
src/panda_controllers/src/devel/share/panda_controllers/cmake/: panda_controllersConfig.cmake
src/panda_controllers/src/devel/share/roseus/ros/panda_controllers/: manifest.l
src/panda_controllers/src/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/panda_controllers/src/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/panda_controllers/src/gtest/googletest/: CTestTestfile.cmake  Makefile
src/panda_controllers/worlds/: palla.world
(+7 files in other folders)
